# django-base

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
core/: settings.py  urls.py  views.py
templates/: index.html
